# shadowseed

./: .gitignore  README.md  beoordelingsformulier_template.csv  pyproject.toml  requirements.txt  runlog_template.csv  verhaal.html
.github/: ci-trigger.txt
.github/workflows/: activation-probe-real-verdict.yml  blind-benchmark.yml  complete-vector-ssot.yml  full-validation-sweep.yml  nightly-vector-backend-comparison.yml  open-set-hf-review.yml  openai-benefit.yml  pages-dashboard.yml  paper-evidence-smoke.yml  paper-pipeline.yml  paper-scenario-smoke.yml  paper-scenario-suite.yml  publish-existing-slm-conclusion.yml  publish-test-results.yml  (+10 more)
benchmarks/: pipeline.md  register.md
data/: gap_test_suite_4_5.json
docs/: 00_shadow_seed_learning_4_5.md  00_shadow_seed_learning_4_6.md  01_framework.md  02_atomic_seeds.md  05_prompts.md  06_handleiding_beoordelaars.md  08_referenties.md  ARCHITECTURE_MAP.md  CLI_COMMAND_MAP.md  README.md  results.md  slm_runs.md  ssl-het-verhaal.md
examples/: local_absencebench_sample.json
scripts/: analyze_rubric_sensitivity.py  build_blind_control_packets.py  make_blind_ab_review.py  prescreen_open_set_output.py  run_absencebench.py  run_benchmark.py  verify_absencebench.py
site/: app.js  index.html  styles.css  verhaal.html
tests/: test_absencebench_runner.py  test_activation_probe.py  test_adversarial_gate_benchmark.py  test_agent_safety_contract.py  test_answer_pair_winrate.py  test_artifact_snapshot.py  test_benchmark_results.py  test_benefit_suite.py  test_cli_parser.py  test_cli_route_integration.py  test_cli_smoke.py  test_dialectic_falsification.py  test_embedding_backends.py  test_execution_logic.py  test_false_positive_suite.py  test_generative_payoff_suite.py  test_generative_seed_variant.py  test_host_verification.py  test_lifecycle_ttl.py  test_make_blind_ab_review.py  test_manager_alignment.py  test_manager_smoke.py  test_model_benefit_suite.py  test_ollama_backend.py  test_open_review_artifact_coherence.py  test_open_set_hf.py  test_open_set_model_detector.py  test_open_set_models.py  test_open_set_prescreen.py  test_open_set_review_summary.py  test_open_set_seed_review.py  test_open_set_workflow_integration.py  test_openai_backend.py  test_optional_vector_backends.py  test_recurrence_clustering.py  test_result_analyzer.py  test_rubric_sensitivity.py  test_seed_normalization.py  test_seed_retrieval_probe.py  test_shadow_chat.py  (+5 more)
(+187 files in other folders)
