[project]
name = "shadowseed"
version = "0.2.0"
description = "Benchmarkklare startrepo voor Shadow Seed Learning 4.5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
models = [
  "sentence-transformers>=2.7",
]
test = [
  "pytest>=8.0",
]
dev = [
  "shadowseed[test,models]",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shadowseed = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
