[project]
name = "shadowseed"
version = "0.2.0"
description = "Benchmarkklare startrepo voor Shadow Seed Learning 4.6"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.scripts]
shadowseed = "shadowseed.cli:main"

[project.optional-dependencies]
models = [
  "sentence-transformers>=2.7",
  "transformers>=4.40",
  "torch>=2.2",
]
paper = [
  "pymupdf>=1.24",
]
vector-faiss = [
  "faiss-cpu>=1.8",
]
vector-chroma = [
  "chromadb>=0.5",
]
vector = [
  "shadowseed[vector-faiss,vector-chroma]",
]
test = [
  "pytest>=8.0",
  "ruff>=0.6",
]
dev = [
  "shadowseed[test,models,vector,paper]",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shadowseed = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
